<?xml version="1.0"?>
<package format="2">
  <name>pupil_utils</name>
  <version>0.0.0</version>
  <description>Utilities for the pupil packages</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="joaomgper94@gmail.com">johnmper</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rostopic</depend>
  <depend>nodelet</depend>
  <depend>cv_bridge</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>kinova_msgs</depend>
  <depend>kinova_driver</depend>
  <depend>kinova_description</depend>
  <depend>kdl_parser</depend>
  <depend>trajectory_msgs</depend>

  <depend>ros_utils</depend>
  <depend>pupil_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
